@@ -63,7 +63,7 @@ private:
 	ClientManager::SignalSend::ManagedConnection sendConn;
 	ClientManager::SignalReceive::ManagedConnection statsConn;
 
-	int64_t getBytes() const;
+	std::pair<size_t, size_t> getBytes() const;
 	void onReceive(Entity& c, AdcCommand& cmd, bool&);
 	void onSend(Entity& c, const AdcCommand& cmd, bool&);
 	void onData(Entity& c, const uint8_t* data, size_t len);
